fix overflow y

--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,6 @@
 
 @import url('https://fonts.googleapis.com/css?family=Fira Mono');
 
-body {
-  overflow-y: hidden;
-}
 
 /* Fonts */
 .courier
